--- a/styles.css
+++ b/styles.css
@@ -694,7 +694,6 @@ h6 {
     left: 324px;
     top: 512px;
     
-    background: url(image.png);
     border-radius: 10px;
   }
 
@@ -705,7 +704,6 @@ h6 {
     left: 428px;
     top: 512px;
     
-    background: url(image.png);
     border-radius: 10px;
   }
 
@@ -716,7 +714,6 @@ h6 {
     left: 532px;
     top: 512px;
     
-    background: url(image.png);
     border-radius: 10px;
   }
 
@@ -727,7 +724,6 @@ h6 {
     left: 635px;
     top: 512px;
 
-    background: url(image.png);
     border-radius: 10px;
     transform: rotate(179.6deg);
   }
@@ -970,45 +966,112 @@ h6 {
     top: 700px;
   }
 
-.cart-original {
+.cart-original-text {
   position: absolute;
   width: 249px;
   height: 35px;
-  left: 580px;
-  top: 75px;
+  left: 325px;
 
   font-family: Arial, Helvetica, sans-serif;
   font-style: normal;
-  font-weight: bold;
-  font-size: 40px;
+  font-weight: normal;
+  font-size: 20px;
   line-height: 62px;
 
   color: #664434;
 }
 
-.original-cart {
-
-  position: absolute;
-  width: 235px;
-  height: 181px;
-  left: 320px;
-  top: 139px;
-
-  background: url(image.png);
-  border-radius: 40px;
-}
-
-.cart-o-price{
+.cart-glaze {
   position: absolute;
   width: 249px;
   height: 35px;
-  left: 850px;
-  top: 75px;
+  left: 475px;
 
   font-family: Arial, Helvetica, sans-serif;
   font-style: normal;
-  font-weight: bold;
-  font-size: 40px;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 62px;
+
+  color: #664434;
+}
+
+.cart-rolls {
+  position: absolute;
+  width: 249px;
+  height: 35px;
+  left: 685px;
+
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 62px;
+
+  color: #664434;
+}
+
+.cart-boxes {
+  position: absolute;
+  width: 249px;
+  height: 35px;
+  left: 825px;
+
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 62px;
+
+  color: #664434;
+}
+
+
+.original-cart {
+
+  position: absolute;
+  width: 100px;
+  height: 75px;
+  left: 300px;
+  top: 200px;
+
+  border-radius: 5px;
+}
+
+.cart-price{
+  position: absolute;
+  width: 249px;
+  height: 35px;
+  left: 910px;
+
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 62px;
+
+  color: #664434;
+}
+
+.cartItems{
+    width: 100%;
+    position: flex;
+    justify-content: space-around;
+    padding: 20px 10px;
+}
+
+.cart-edit{
+  padding-top:10px;
+  position: absolute;
+  width: 249px;
+  height: 35px;
+  left: 1000px;
+  text-decoration: underline;
+
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
   line-height: 62px;
 
   color: #664434;
@@ -1017,7 +1080,7 @@ h6 {
 
 .cart-square2{
   height: 790px;
-  width: 800px;
+  width: 850px;
   left: 277px;
   top: 60px;
   border-radius: 0px;
@@ -1026,9 +1089,9 @@ h6 {
 }
 
 .cart-square3{
-  width: 352px;
+  width: 307px;
   height: 790px;
-  left: 1085px;
+  left: 1135px;
   top: 60px;
   border-radius: 0px;
   position: absolute;
@@ -1052,13 +1115,20 @@ h6 {
 }
 
 .delete-item{
+  padding-top:10px;
   position: absolute;
-  left: 40.56%;
-  right: 58.47%;
-  top: 36%;
-  bottom: 65.11%;
+  width: 249px;
+  height: 35px;
+  left: 1050px;
+  text-decoration: underline;
 
-  
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 62px;
+
+  color: #664434;
 }
 
 .checkoutButton{
@@ -1084,7 +1154,7 @@ h6 {
   position: absolute;
   width: 209px;
   height: 112px;
-  left: 1120px;
+  left: 1180px;
   top: 100px;
   font-family: Arial, Helvetica, sans-serif;
   font-style: normal;
@@ -1097,9 +1167,9 @@ h6 {
 
 .white-square{
   position: absolute;
-  width: 295px;
+  width: 230px;
   height: 320px;
-  left: 1117px;
+  left: 1180px;
   top: 200px;
 
   background: #FFFFFF;
@@ -1108,9 +1178,9 @@ h6 {
 
 .checkoutButton1{
   position: absolute;
-  width: 290px;
+  width: 230px;
   height: 42px;
-  left: 1120px;
+  left: 1180px;
   top: 548px;
   
   background: #664434;
@@ -1130,7 +1200,7 @@ h6 {
   width: 86px;
   height: 19px;
   left: 1138px;
-  top: 211px;
+  top: 250px;
 
   font-family: Arial, Helvetica, sans-serif;
   font-style: normal;
@@ -1139,70 +1209,25 @@ h6 {
   line-height: 18px;
 
   color: #664434;
-}
-
-.CartOriginal{
-  position: absolute;
-  width: 100px;
-  height: 25px;
-  left: 1139px;
-  top: 248px;
-
-  font-family: Arial, Helvetica, sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 25px;
-  /* identical to box height */
-
-
-  color: #664434;
-
-}
-
-.CartPrice{
-  position: absolute;
-  width: 81px;
-  height: 25px;
-  left: 1307px;
-  top: 248px;
-  
-  font-family: Arial, Helvetica, sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 25px;
-  /* identical to box height */
-  
-  text-align: right;
-  
-  color: #664434;
-
-}
-
-.CartGlaze {
-  position: absolute;
-  width: 120px;
-  height: 43px;
-  left: 1139px;
-  top: 282px;
-
-  font-family: Arial, Helvetica, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 15px;
-  line-height: 18px;
-
-  color: #664434;
-
 }
 
 .seperation {
   position: absolute;
-  width: 295px;
+  width: 225px;
   height: 1px;
-  left: 1117px;
+  left: 1182px;
   top: 360px;
+
+  background: rgba(102, 68, 52, 0.5);
+  border-radius: 5px;
+}
+
+.seperation1 {
+  position: absolute;
+  width: 775px;
+  height: 5px;
+  left: 325px;
+  top: 160px;
 
   background: rgba(102, 68, 52, 0.5);
   border-radius: 5px;
@@ -1382,3 +1407,49 @@ h6 {
 
   color: #664434;
 }
+
+.cartProduct{
+  max-width: 650px;
+  font-family: Arial, Helvetica, sans-serif;
+  justify-content: space-around;
+  margin: 0 auto;
+  margin-left: 325px;
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 50px;
+  padding-bottom: 50px;
+}
+
+.cartHeader{
+  width: 100%;
+  max-width: 650px;
+  display: flex;
+  justify-content: flex start;
+  margin: 0 auto;
+  margin-top: 50px;
+
+}
+
+.cartProductHeading {
+  width: 50%;
+
+}
+
+.cartPrice {
+  width: 30%;
+  display: flex;
+  align-items: center;
+}
+
+.cartQuantity {
+  width: 25%;
+}
+
+.cartTotal {
+  width: 15%;
+}
+
+
+
