--- a/styles.css
+++ b/styles.css
@@ -985,7 +985,7 @@ h6 {
   position: absolute;
   width: 249px;
   height: 35px;
-  left: 475px;
+  left: 500px;
 
   font-family: Arial, Helvetica, sans-serif;
   font-style: normal;
@@ -1000,7 +1000,7 @@ h6 {
   position: absolute;
   width: 249px;
   height: 35px;
-  left: 685px;
+  left: 725px;
 
   font-family: Arial, Helvetica, sans-serif;
   font-style: normal;
@@ -1150,6 +1150,21 @@ h6 {
   color: #EFCE8A;
 }
 
+.order-price {
+  position: absolute;
+  width: 209px;
+  height: 112px;
+  left: 1180px;
+  top: 150px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 25px;
+  line-height: 56px;
+
+  color: #664434;
+}
+
 .order-summary {
   position: absolute;
   width: 209px;
@@ -1164,6 +1179,8 @@ h6 {
 
   color: #664434;
 }
+
+
 
 .white-square{
   position: absolute;
