--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -132,8 +132,11 @@
 
 	
 	#content p{
-		line-height: 0.5em;
+		line-height: 2em;
+		font-size: 0.75em;
+		font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif; 
 	}
+
 
 	#content h1 {
 		font-weight: bold;
@@ -264,77 +267,6 @@
 		animation: gradient-animation 0.75s ease forwards;
 	}
 
-	/* Referenced https://fossheim.io/writing/posts/css-text-gradient/ for text graident and animation*/
-	#content h4 {
-		font-weight: bold;
-		font-size: 2em;
-		margin-bottom: 0.25em;
-		display: block;
-		cursor: pointer;
-		width: 605px;
-		margin-top: 1em;
-	
-		/* Create the gradient. */
-		background-image: linear-gradient(
-			60deg,
-			#53B1F7 5%, 
-			#2EC2F8 15%, 
-			#B397EF 20%, 
-			#E89CE5 25%, 
-			#E36CED 50%, 
-			#A09CE8 65%, 
-			#70A0F5 70%, 
-			#9C97EF  75%,
-			#8781EC 85%, 
-			#FFCBC0 85%);
-			
-		/* Set the background size and repeat properties. */
-		background-size: 100%;
-		background-repeat: repeat;
-
-		/* Use the text as a mask for the background. This will show the gradient as a text color rather than element bg. */
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent; 
-	
-		/* Animate the text when loading the element. This animates it on page load and when hovering out. */
-		animation: gradient-animation 0.75s ease forwards;
-	}
-
-	/* Referenced https://fossheim.io/writing/posts/css-text-gradient/ for text graident and animation*/
-	#content h4 {
-		font-weight: bold;
-		font-size: 2em;
-		margin-bottom: 0.25em;
-		display: block;
-		cursor: pointer;
-		width: 605px;
-		margin-top: 1em;
-	
-		/* Create the gradient. */
-		background-image: linear-gradient(
-			60deg,
-			#53B1F7 5%, 
-			#2EC2F8 15%, 
-			#B397EF 20%, 
-			#E89CE5 25%, 
-			#E36CED 50%, 
-			#A09CE8 65%, 
-			#70A0F5 70%, 
-			#9C97EF  75%,
-			#8781EC 85%, 
-			#FFCBC0 85%);
-			
-		/* Set the background size and repeat properties. */
-		background-size: 100%;
-		background-repeat: repeat;
-
-		/* Use the text as a mask for the background. This will show the gradient as a text color rather than element bg. */
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent; 
-	
-		/* Animate the text when loading the element. This animates it on page load and when hovering out. */
-		animation: gradient-animation 0.75s ease forwards;
-	}
 
 	/* Referenced https://fossheim.io/writing/posts/css-text-gradient/ for text graident and animation*/
 	#content h5 {
@@ -343,7 +275,6 @@
 		margin-bottom: 0.25em;
 		display: block;
 		cursor: pointer;
-		width: 605px;
 		margin-top: 1em;
 		
 			/* Create the gradient. */
@@ -369,6 +300,7 @@
 			/* Animate the text when loading the element. This animates it on page load and when hovering out. */
 			animation: gradient-animation 0.75s ease forwards;
 		}
+
 	/* Referenced https://fossheim.io/writing/posts/css-text-gradient/ for animation*/
 	/* Animation shown when entering the page and after the hover animation. */
 	@keyframes gradient-animation {
@@ -977,6 +909,12 @@
 		margin-bottom: 30px;
 	}
 
+	#subsection p{
+		line-height: 2em;
+		font-size: 1em;
+
+	}
+
 	#text-content-sub{
 		font-size: 13px;
 		color: #545454;
@@ -987,7 +925,7 @@
 	}
 
 	#content-text{
-		margin-top: 3em;
+		margin-top: 2em;
 		font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif; 
 	}
 
@@ -1067,3 +1005,91 @@
 		clear: both;
 	}
 
+	/* Referenced https://fossheim.io/writing/posts/css-text-gradient/ for text graident and animation*/
+	#radiate-content h2 {
+		font-weight: bold;
+		font-size: 3em;
+		margin-bottom: 0.25em;
+		display: block;
+		cursor: pointer;
+		width: 605px;
+		margin-top: 1em;
+	
+		/* Create the gradient. */
+		background-image: linear-gradient(
+			60deg,
+			#E57975 15%, 
+			#FF0900 30%, 
+			#FC3A32 70%, 
+			#FFABC2 100%);
+			
+		/* Set the background size and repeat properties. */
+		background-size: 100%;
+		background-repeat: repeat;
+
+		/* Use the text as a mask for the background. This will show the gradient as a text color rather than element bg. */
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent; 
+	
+		/* Animate the text when loading the element. This animates it on page load and when hovering out. */
+		animation: gradient-animation 0.75s ease forwards;
+	}
+
+		
+
+	/* Referenced https://fossheim.io/writing/posts/css-text-gradient/ for text graident and animation*/
+	#radiate-content h4 {
+		font-weight: bold;
+		font-size: 2em;
+		display: block;
+		cursor: pointer;
+		margin-top: 2em;
+	
+		/* Create the gradient. */
+		background-image: linear-gradient(
+			60deg,
+			#E57975 15%, 
+			#FF0900 30%, 
+			#FC3A32 70%, 
+			#FFABC2 100%);
+			
+		/* Set the background size and repeat properties. */
+		background-size: 100%;
+		background-repeat: repeat;
+
+		/* Use the text as a mask for the background. This will show the gradient as a text color rather than element bg. */
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent; 
+	
+		/* Animate the text when loading the element. This animates it on page load and when hovering out. */
+		animation: gradient-animation 0.75s ease forwards;
+	}
+
+
+	/* Referenced https://fossheim.io/writing/posts/css-text-gradient/ for text graident and animation*/
+	#radiate-content h5 {
+		font-weight: bold;
+		font-size: 1.5em;
+		margin-bottom: 0.25em;
+		display: block;
+		cursor: pointer;
+		margin-top: 1.5em;
+		
+		background-image: linear-gradient(
+			60deg,
+			#5C719B 15%, 
+			#192F5C 30%, 
+			#0033B9 70%, 
+			#03133D 100%);
+				
+		/* Set the background size and repeat properties. */
+		background-size: 100%;
+		background-repeat: repeat;
+	
+		/* Use the text as a mask for the background. This will show the gradient as a text color rather than element bg. */
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent; 
+		
+		/* Animate the text when loading the element. This animates it on page load and when hovering out. */
+		animation: gradient-animation 0.75s ease forwards;
+	}
