--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -927,6 +927,14 @@
 	#content-text{
 		margin-top: 2em;
 		font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif; 
+		display:flex;
+		margin-bottom: 2em;
+		}
+
+	#content-list{
+		line-height: 2em;
+		margin-top: 2em;
+		font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif; 
 	}
 
 	/* About Us Page Responsiveness
@@ -963,8 +971,11 @@
 		}
 	}
 
-	#radiate-header-img{
-		width: 55em;
+	#radiate-img{
+		margin-left: auto;
+		margin-right: auto;
+		display: block;
+		width: 100%;
 		margin-bottom: 5em;
 	}
 	
@@ -1035,6 +1046,9 @@
 		animation: gradient-animation 0.75s ease forwards;
 	}
 
+	#radiate-content p{
+		width: 100%;
+	}
 		
 
 	/* Referenced https://fossheim.io/writing/posts/css-text-gradient/ for text graident and animation*/
