--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1025,6 +1025,7 @@
 		width: 605px;
 		margin-top: 1em;
 		display:flex;
+		width: 100%;
 
 	
 		/* Create the gradient. */
@@ -1059,6 +1060,8 @@
 		display:flex;
 		cursor: pointer;
 		margin-top: 2em;
+		width: 100%;
+
 	
 		/* Create the gradient. */
 		background-image: linear-gradient(
@@ -1089,6 +1092,7 @@
 		display:flex;
 		cursor: pointer;
 		margin-top: 1.5em;
+		width: 100%;
 		
 		background-image: linear-gradient(
 			60deg,
@@ -1108,3 +1112,4 @@
 		/* Animate the text when loading the element. This animates it on page load and when hovering out. */
 		animation: gradient-animation 0.75s ease forwards;
 	}
+
