--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -323,6 +323,12 @@
 		padding-bottom: 20px;
 	}
 
+	#content video{
+		float: left; 
+		width: 90%;
+		padding-bottom: 20px;
+	}
+
 	/* Styling for bio */
 
 	#bio {
@@ -474,7 +480,7 @@
 		font-size: 20px;	
 	}
 
-	/* Button - Glow on Hover, referenced https://codepen.io/kocsten/pen/rggjXp */
+	/* Button - Glow on Hover Animation, referenced https://codepen.io/kocsten/pen/rggjXp */
 	#button-hover:before {
 		content: '';
 		background: linear-gradient(90deg,
@@ -978,6 +984,14 @@
 		width: 100%;
 		margin-bottom: 5em;
 	}
+
+	#agot-img{
+		margin-left: auto;
+		margin-right: auto;
+		display: block;
+		width: 100%;
+		margin-bottom: 5em;
+	}
 	
 	/* Create two equal columns that floats next to each other */
 	.column1 {
@@ -1113,3 +1127,110 @@
 		animation: gradient-animation 0.75s ease forwards;
 	}
 
+
+	/* Referenced https://fossheim.io/writing/posts/css-text-gradient/ for text graident and animation*/
+	#agot-content h2 {
+		font-weight: bold;
+		font-size: 3em;
+		margin-bottom: 0.25em;
+		cursor: pointer;
+		width: 605px;
+		margin-top: 1em;
+		display:flex;
+		width: 100%;
+
+	
+		/* Create the gradient. */
+		background-image: linear-gradient(
+			60deg,
+			#FFB23F 15%, 
+			#FF9900 30%, 
+			#FFCC80 70%, 
+			#FDA31C 100%);
+			
+		/* Set the background size and repeat properties. */
+		background-size: 100%;
+		background-repeat: repeat;
+
+		/* Use the text as a mask for the background. This will show the gradient as a text color rather than element bg. */
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent; 
+	
+		/* Animate the text when loading the element. This animates it on page load and when hovering out. */
+		animation: gradient-animation 0.75s ease forwards;
+	}
+
+	#radiate-content p{
+		width: 100%;
+	}
+
+	#agot-content p{
+		width: 100%;
+	}
+
+	#agot-content img{
+		width: 101%;
+		margin-left:auto;
+		margin-right:auto;
+	}
+		
+
+	/* Referenced https://fossheim.io/writing/posts/css-text-gradient/ for text graident and animation*/
+	#agot-content h4 {
+		font-weight: bold;
+		font-size: 2em;
+		display:flex;
+		cursor: pointer;
+		margin-top: 2em;
+		width: 100%;
+
+	
+		/* Create the gradient. */
+		background-image: linear-gradient(
+			60deg,
+			#FFB23F 15%, 
+			#FF9900 30%, 
+			#FFCC80 70%, 
+			#FDA31C 100%);
+			
+		/* Set the background size and repeat properties. */
+		background-size: 100%;
+		background-repeat: repeat;
+
+		/* Use the text as a mask for the background. This will show the gradient as a text color rather than element bg. */
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent; 
+	
+		/* Animate the text when loading the element. This animates it on page load and when hovering out. */
+		animation: gradient-animation 0.75s ease forwards;
+	}
+
+
+	/* Referenced https://fossheim.io/writing/posts/css-text-gradient/ for text graident and animation*/
+	#agot-content h5 {
+		font-weight: bold;
+		font-size: 1.5em;
+		margin-bottom: 0.25em;
+		display:flex;
+		cursor: pointer;
+		margin-top: 1.5em;
+		width: 100%;
+		
+		background-image: linear-gradient(
+			60deg,
+			#5C719B 15%, 
+			#192F5C 30%, 
+			#0033B9 70%, 
+			#03133D 100%);
+				
+		/* Set the background size and repeat properties. */
+		background-size: 100%;
+		background-repeat: repeat;
+	
+		/* Use the text as a mask for the background. This will show the gradient as a text color rather than element bg. */
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent; 
+		
+		/* Animate the text when loading the element. This animates it on page load and when hovering out. */
+		animation: gradient-animation 0.75s ease forwards;
+	}
