--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -843,6 +843,35 @@
 		animation: gradient-animation 0.75s ease forwards;
 	}
 
+		/* Referenced https://fossheim.io/writing/posts/css-text-gradient/ for animation and gradient */
+		#ah-heading{
+			text-align: left;
+			font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif; 
+			font-weight: bold;
+			font-size: 3em;
+			margin-bottom: 0.25em;
+			cursor: pointer;
+		
+		/* Create the gradient. */
+			background-image: linear-gradient(
+				60deg,
+				#6CD6ED 15%, 
+				#39DEE9 30%, 
+				#1FF5F5 60%, 
+				#00C1FF 80%);
+				
+			/* Set the background size and repeat properties. */
+			background-size: 100%;
+			background-repeat: repeat;
+	
+			/* Use the text as a mask for the background. This will show the gradient as a text color rather than element bg. */
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent; 
+		
+		/* Animate the text when loading the element. This animates it on page load and when hovering out. */
+			animation: gradient-animation 0.75s ease forwards;
+		}
+
 	/* Referenced https://fossheim.io/writing/posts/css-text-gradient/ for animation and gradient */
 	#radiate-heading{
 		text-align: left;
@@ -929,14 +958,6 @@
 		margin-top: 40px;
 		margin-bottom: 40px;
 	}
-
-	#content-text{
-		margin-top: 2em;
-		font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif; 
-		display:flex;
-		margin-bottom: 2em;
-		}
-
 	#content-list{
 		line-height: 2em;
 		margin-top: 2em;
@@ -977,21 +998,6 @@
 		}
 	}
 
-	#radiate-img{
-		margin-left: auto;
-		margin-right: auto;
-		display: block;
-		width: 100%;
-		margin-bottom: 5em;
-	}
-
-	#agot-img{
-		margin-left: auto;
-		margin-right: auto;
-		display: block;
-		width: 100%;
-		margin-bottom: 5em;
-	}
 	
 	/* Create two equal columns that floats next to each other */
 	.column1 {
@@ -1028,6 +1034,22 @@
 		content: "";
 		display: table;
 		clear: both;
+	}
+
+	/*Style all the text in the project content */
+	#subsection p{
+		margin-top: 2em;
+		font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif; 
+		display:flex;
+		margin-bottom: 2em;
+	}
+
+	#subsection img{
+		margin-left: auto;
+		margin-right: auto;
+		display: block;
+		width: 100%;
+		margin-bottom: 5em;
 	}
 
 	/* Referenced https://fossheim.io/writing/posts/css-text-gradient/ for text graident and animation*/
@@ -1173,6 +1195,16 @@
 		margin-left:auto;
 		margin-right:auto;
 	}
+
+	#ah-content p{
+		width: 100%;
+	}
+
+	#ah-content img{
+		width: 101%;
+		margin-left:auto;
+		margin-right:auto;
+	}
 		
 
 	/* Referenced https://fossheim.io/writing/posts/css-text-gradient/ for text graident and animation*/
@@ -1231,6 +1263,98 @@
 		-webkit-background-clip: text;
 		-webkit-text-fill-color: transparent; 
 		
+		/* Animate the text when loading the element. This animates it on page load and when hovering out. */
+		animation: gradient-animation 0.75s ease forwards;
+	}
+
+		/* Referenced https://fossheim.io/writing/posts/css-text-gradient/ for text graident and animation*/
+		#ah-content h4 {
+			font-weight: bold;
+			font-size: 2em;
+			display:flex;
+			cursor: pointer;
+			margin-top: 2em;
+			width: 100%;
+	
+		
+			/* Create the gradient. */
+			background-image: linear-gradient(
+				60deg,
+				#6CD6ED 15%, 
+				#39DEE9 30%, 
+				#1FF5F5 70%, 
+				#00C1FF 100%);
+				
+			/* Set the background size and repeat properties. */
+			background-size: 100%;
+			background-repeat: repeat;
+	
+			/* Use the text as a mask for the background. This will show the gradient as a text color rather than element bg. */
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent; 
+		
+			/* Animate the text when loading the element. This animates it on page load and when hovering out. */
+			animation: gradient-animation 0.75s ease forwards;
+		}
+	
+	
+		/* Referenced https://fossheim.io/writing/posts/css-text-gradient/ for text graident and animation*/
+		#ah-content h5 {
+			font-weight: bold;
+			font-size: 1.5em;
+			margin-bottom: 0.25em;
+			display:flex;
+			cursor: pointer;
+			margin-top: 1.5em;
+			width: 100%;
+			
+			background-image: linear-gradient(
+				60deg,
+				#5C719B 15%, 
+				#192F5C 30%, 
+				#0033B9 70%, 
+				#03133D 100%);
+					
+			/* Set the background size and repeat properties. */
+			background-size: 100%;
+			background-repeat: repeat;
+		
+			/* Use the text as a mask for the background. This will show the gradient as a text color rather than element bg. */
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent; 
+			
+			/* Animate the text when loading the element. This animates it on page load and when hovering out. */
+			animation: gradient-animation 0.75s ease forwards;
+		}
+	
+		/* Referenced https://fossheim.io/writing/posts/css-text-gradient/ for text graident and animation*/
+	#ah-content h2 {
+		font-weight: bold;
+		font-size: 3em;
+		margin-bottom: 0.25em;
+		cursor: pointer;
+		width: 605px;
+		margin-top: 1em;
+		display:flex;
+		width: 100%;
+
+	
+		/* Create the gradient. */
+		background-image: linear-gradient(
+			60deg,
+			#6CD6ED 15%, 
+			#39DEE9 30%, 
+			#1FF5F5 70%, 
+			#00C1FF 100%);
+			
+		/* Set the background size and repeat properties. */
+		background-size: 100%;
+		background-repeat: repeat;
+
+		/* Use the text as a mask for the background. This will show the gradient as a text color rather than element bg. */
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent; 
+	
 		/* Animate the text when loading the element. This animates it on page load and when hovering out. */
 		animation: gradient-animation 0.75s ease forwards;
 	}
