--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -958,7 +958,8 @@
 		margin-top: 40px;
 		margin-bottom: 40px;
 	}
-	#content-list{
+
+	#subsection ul{
 		line-height: 2em;
 		margin-top: 2em;
 		font-family: "Helvetica Neue", Helvetica, Arial, Sans-serif; 
