--- a/assets/css/photography-styles.css
+++ b/assets/css/photography-styles.css
@@ -212,3 +212,7 @@
         background-image: url(https://uploads-ssl.webflow.com/5e17ac4dfb569e834e8a6376/60972559be3be4a5f1fc8dcc_clock.jpg);
         }
     }
+
+    #photograph-text{
+        color:white;
+    }
