--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,7 @@
 
 /* The overflow-y property specifies whether to clip the content, add a scroll bar, or display overflow content of a block-level element, when it overflows at the top and bottom edges. */
 
+/* add comment
 html {
 	overflow-y: scroll;
 	scroll-behavior: smooth;
